[build-system]
requires = [ "setuptools>=42", "wheel", "setuptools_scm",]
build-backend = "setuptools.build_meta"

[project]
name = "taipy-gui"
version = "0.0.0"  # will be set dynamically
description = "Low-code library to create graphical user interfaces on the Web for your Python applications."
readme = "package_desc.md"
requires-python = ">=3.8"
keywords = [ "taipy-gui",]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = []  # will be set dynamically

[project.license]
text = "Apache License 2.0"

[project.optional-dependencies]
test = [ "pytest>=3.8",]
ngrok = [ "pyngrok>=5.1,<6.0",]
image = [ "python-magic>=0.4.24,<0.5; platform_system!='Windows'", "python-magic-bin>=0.4.14,<0.5; platform_system=='Windows'",]
arrow = [ "pyarrow>=14.0.2,<15.0",]

[project.urls]
Homepage = "https://www.taipy.io"
Documentation = "https://docs.taipy.io"
Source = "https://github.com/Avaiga/taipy"
Download = "https://pypi.org/project/taipy/#files"
Tracker = "https://github.com/Avaiga/taipy/issues"
Security = "https://github.com/Avaiga/taipy?tab=security-ov-file#readme"
"Release notes" = "https://docs.taipy.io/en/release-0.0.0/relnotes/"  # will be set dynamically

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
taipy = [ "version.json",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "taipy", "taipy.gui", "taipy.gui.*",]
