[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taipy-gui"
description = "Low-code library to create graphical user interfaces on the Web for your Python applications."
readme = "package_desc.md"
requires-python = ">=3.9"
license = {text = "Apache License 2.0"}
authors = [{name = "Avaiga", email = "dev@taipy.io"}]
keywords = ["taipy-gui"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
ngrok = ["pyngrok>=5.1,<6.0"]
image = [
    "python-magic>=0.4.24,<0.5;platform_system!='Windows'",
    "python-magic-bin>=0.4.14,<0.5;platform_system=='Windows'",
]
arrow = ["pyarrow>=17.0.0,<18.0"]

[tool.setuptools.packages]
find = {include = ["taipy", "taipy.gui", "taipy.gui.*"]}

[project.urls]
homepage = "https://github.com/avaiga/taipy"
