[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taipy-rest"
description = "Library to expose taipy-core REST APIs."
readme = "package_desc.md"
requires-python = ">=3.9"
license = {text = "Apache License 2.0"}
authors = [{name = "Avaiga", email = "dev@taipy.io"}]
keywords = ["taipy-rest"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.packages]
find = {include = ["taipy", "taipy.rest"]}

[project.urls]
homepage = "https://github.com/avaiga/taipy"
